<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="30dp"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/TitleText"
            android:text="@string/activity_register_title" />

        <TextView
            style="@style/RegisterBasicText"
            android:text="@string/activity_register_name" />

        <EditText
            android:id="@+id/et_register_first_name"
            style="@style/RegisterEditText" />

        <TextView
            style="@style/RegisterBasicText"
            android:text="@string/activity_register_lastname" />

        <EditText
            android:id="@+id/et_register_last_name"
            style="@style/RegisterEditText" />

        <TextView
            style="@style/RegisterBasicText"
            android:text="@string/activity_register_birthday" />

        <EditText
            android:id="@+id/et_register_birthday"
            style="@style/RegisterEditText" />

        <TextView
            style="@style/RegisterBasicText"
            android:text="@string/activity_register_email" />

        <EditText
            android:id="@+id/et_register_eamil"
            style="@style/RegisterEditText" />

        <TextView
            style="@style/RegisterBasicText"
            android:text="@string/activity_register_password" />

        <EditText
            android:id="@+id/et_register_password"
            style="@style/RegisterEditText"
            android:inputType="textPassword"/>

        <Button
            android:layout_marginBottom="50dp"
            android:id="@+id/btn_register_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_login_btn_clickable"
            android:text="테스트 가입" />
    </LinearLayout>
</ScrollView>